# django-blog

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
blog/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
scripts/: init_dev_data.py
